--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -147,13 +147,13 @@ a:hover {
 }
 /*formularios*/
 
-label, input[type="text"], input[type="password"], input[type="email"], select {
+label, input[type="text"], input[type="password"], input[type="email"], input[type="number"], select, textarea {
       display: block;
       width: 95%;
       margin-top: 2px;
       margin-bottom: 2px;
 }
-input[type="text"], input[type="password"], input[type="email"], select {
+input[type="text"], input[type="password"], input[type="email"], input[type="number"], select, textarea {
       border: 1px solid #C9C9C9;
       box-shadow: 0px 0px 2px #ccc inset;
       background: white;
