--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -8,6 +8,10 @@
 body {
       background: url(../img/bg.png);
 }
+img {
+      width: 150px;
+      height: 170px;
+}
 table {
       text-align: center;
       width: 100%;
@@ -18,12 +22,26 @@ td {
       padding: 2px;
 }
 .alert-green {
-      color: #18FC07;
+      display: block;
+      background: #F0F0F0;
+      padding: 15px;
+      color: #01B1EA;
+      font-size: 17px;
+      font-family: Fira Sans Light;
       text-align: center;
+      margin-bottom: 10px;
+      border-radius: 10px;
 }
 .alert-red {
-      color: red;
+      display: block;
+      background: #F0F0F0;
+      padding: 15px;
+      color: #F44DB2;
+      font-size: 17px;
+      font-family: Fira Sans Light;
       text-align: center;
+      margin-bottom: 10px;
+      border-radius: 10px;
 }
 a {
       color: #01B1EA;
@@ -147,13 +165,13 @@ a:hover {
 }
 /*formularios*/
 
-label, input[type="text"], input[type="password"], input[type="email"], input[type="number"], select, textarea {
+label, input[type="text"], input[type="password"], input[type="email"], input[type="number"], select, textarea, input[type="file"] {
       display: block;
       width: 95%;
       margin-top: 2px;
       margin-bottom: 2px;
 }
-input[type="text"], input[type="password"], input[type="email"], input[type="number"], select, textarea {
+input[type="text"], input[type="password"], input[type="email"], input[type="number"], select, textarea, input[type="file"] {
       border: 1px solid #C9C9C9;
       box-shadow: 0px 0px 2px #ccc inset;
       background: white;
@@ -186,6 +204,14 @@ input[type="button"], input[type="submit"], button, .button {
       width: 120px;
       text-align: center;
       margin-bottom: 20px;
+}
+.button-gestion {
+      margin-top: 5px;
+      margin-bottom: 5px;
+}
+.button-naranja {
+      background: red;
+      border: 1px solid #EB0C0C;
 }
 label, input[type="button"], input[type="submit"], button {
       display: block;
