--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -8,9 +8,9 @@
 body {
       background: url(../img/bg.png);
 }
-img {
-      width: 150px;
-      height: 170px;
+.image {
+      width: 140px;
+      height: 139px;
 }
 table {
       text-align: center;
@@ -244,6 +244,14 @@ label, input[type="button"], input[type="submit"], button {
       float: left;
       margin-left: 10px;
       text-align: center;
+      margin-top: 20px;
+}
+.product a {
+      color: black;
+      text-decoration: none;
+}
+.product a:hover {
+      color: #555;
 }
 .product img {
       width: 100px;
@@ -254,7 +262,33 @@ label, input[type="button"], input[type="submit"], button {
 }
 /*footer*/
 
-#footer {
+.detalles-product {
+      width: 100%
+}
+.detalles-product img {
+      display: block;
+      width: 55%;
+      float: left;
+      margin-right: 20px;
+}
+.detalles-product .datos {
+      padding-bottom: 20px;
+      text-align: center;
+      width: 40%;
+      float: right;
+}
+.detalles-product h2 {
+      font-weight: normal;
+      color: #6B0505;
+      margin-top: 30%;
+      margin-bottom: 20px;
+}
+.detalles-product p {
+      font-size: 18px;
+      color: #073C13;
+      margin-bottom: 20px;
+}
+.detalles-product #footer {
       clear: both;
       text-align: center;
       padding-top: 10px;
