--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -297,3 +297,26 @@ label, input[type="button"], input[type="submit"], button {
       background: #222222;
       border-top: 4px solid #01B1EA;
 }
+/*carrito*/
+
+.carrito {
+      display: block;
+      float: right;
+      margin-bottom: 20px;
+}
+.carrito h3 {
+      margin-right: 5px;
+      float: left;
+      font-weight: normal;
+      border-bottom: 2px solid black;
+      padding: 5px;
+      text-align: center;
+      color: #4F0303;
+}
+.button-pedido {
+      float: right;
+      width: 120px;
+      text-align: center;
+      font-size: 20px;
+      font-weight: normal;
+}
